<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorBG"
    tools:context="org.nozzy.android.AAU_Chat.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/generic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="242dp"
        android:text="@string/display_name"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_displayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/default_status"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:background="@drawable/buttonshape"
        android:text="@string/block_user"
        android:textColor="@color/ColorPrimaryDark" />

    <Button
        android:id="@+id/profile_decline_req_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/profile_send_req_btn"
        android:layout_alignEnd="@+id/profile_send_req_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/roundbutton"
        android:text="@string/new_direct_chat"
        android:textColor="@android:color/white" />

</RelativeLayout>
